add_library(
    hprod STATIC
        clhprod.cpp
        clhprod_blas.cpp
        hprod_init.F90
        hprod_final.F90
        hprod_bind.F90
        hprod_orbene.F90
        hprod_fockdiag.F90
        hprod_enepole.F90
        hprod_set_wfn0.F90
        hprod_projhigh.F90
        hprod_getprojhigh.F90
        hprod_symlm.F90
        hprod_fc_equiv.F90
        hprod_addfc_tmat.F90
        hprod_htot.F90
        hprod_htot_dft.F90
        hprod_h1tot.F90
        hprod_v1tot.F90
        hprod_h1add.F90
        hprod_v1ext.F90
        hprod_gfock.F90
        hprod_gfock_dft.F90
        hprod_mpfock.F90
        hprod_mpfock_dft.F90
        hprod_energy.F90
        hprod_energy_dft.F90
        hprod_chkconv.F90
        hprod_cidiag.F90
        hprod_cidiagx.F90
        hprod_semicanonical.F90
        hprod_ene_fcore.F90
        hprod_ene_dcore.F90
        hprod_ene_act.F90
        hprod_ene_fcx.F90
        hprod_ene_dcx.F90
        hprod_ene_dft1.F90
        hprod_htot_init.F90
        hprod_orbin.F90
        hprod_htot_getdt.F90
        hprod_htot_mkxmat.F90
        hprod_htot_sum.F90
        hprod_mkint1_sph.F90
        hprod_mkint2_sph.F90
        hprod_mkint2_x3j.F90
        hprod_mkrrad.F90
        hprod_mkrhoc.F90
        hprod_mkrho1.F90
        hprod_mkrho2.F90
        hprod_mkrho2_x3j.F90
        hprod_mkrhoxc.F90
        hprod_mkv2mf.F90
        hprod_mkv2mf_x3j.F90
        hprod_mkv2mf2.F90
        hprod_mfprod.F90
        hprod_mfprod2.F90
        hprod_mfprodx3j.F90
        hprod_mfprod3j.F90
        hprod_mfprod_dft.F90
        hprod_tprod.F90
        hprod_zprod.F90
        hprod_pzprod.F90
        hprod_azprod.F90
        hprod_projpp.F90
        hprod_mkovlp.F90
        hprod_mkovlp2.F90
        hprod_proj.F90
        hprod_proj2.F90
        hprod_ipx.F90
        hprod_dipole.F90
        hprod_dipole_ion.F90
        hprod_trans.F90
        hprod_invden.F90
        hprod_fulldiag.F90
        hprod_norb.F90
        hprod_op1e.F90
        hprod_op2e.F90
        hprod_mklzmat.F90
        hprod_mkl2mat.F90
        hprod_oang.F90
        hprod_projfc.F90
        hprod_projall.F90
        hprod_trace1.F90
        hprod_invwrad.F90
        hprod_htot_dtorb.F90
        hprod_xcprod.F90
        hprod_poisson1.F90
        hprod_xc_ldax.F90
        hprod_xc_ldac.F90
        hprod_kickk.F90
        hprod_getvar.F90
        hprod_printorb.F90
        hprod_mkrho2_ecs.F90
        hprod_mkv2mf_ecs.F90
        hprod_htot_mkxmat_ecs.F90
)