add_library(
    module SHARED
        mod_const.F90
        mod_control.F90
        mod_rad.F90
        mod_sph.F90
        mod_ormas.F90
        mod_bas.F90
        mod_hprod.F90
        mod_expokit.F90
        mod_pes.F90
        mod_hprod.F90
        mod_h1rat.F90
        mod_ppatom.F90
        mod_cc.F90
        mod_cc2.F90
)