add_library(
    ormas SHARED
        clormas.cpp
        ormas_bind.F90
        ormas_cic0.F90
        ormas_hcic1.F90
        ormas_hcic1_ras.F90
        ormas_hcic1_old.F90
        ormas_hcic.F90
        ormas_hcic_ras.F90
        ormas_hcic_rasmat.F90
        ormas_hcic_old.F90
        ormas_mkden1.F90
        ormas_mkden1_ras.F90
        ormas_mkden1_old.F90
        ormas_mkden2.F90
        ormas_mkden2_ras.F90
        ormas_mkden2_old.F90
        ormas_mkden1_ion.F90
        ormas_fab.F90
        ormas_ipx.F90
        ormas_ipx_ras.F90
        ormas_denipd.F90
        ormas_denipx.F90
        ormas_denipx_ras.F90
        ormas_ipx_old.F90
        ormas_ipx_core.F90
        ormas_mkidm.F90
        ormas_mkidm_ras.F90
        ormas_mkidm_old.F90
        ormas_ipd.F90
        ormas_spin.F90
        ormas_spin_ras.F90
        ormas_spin_old.F90
        ormas_info.F90
        ormas_allowed.F90
        ormas_arcwgt.F90
        ormas_dets0.F90
        ormas_dets1.F90
        ormas_dets_single.F90
        ormas_dett.F90
        ormas_sij.F90
        ormas_str_dot_str_0.F90
        ormas_str_dot_str_1.F90
        ormas_dett_1.F90
        ormas_dist.F90
        ormas_final.F90
        ormas_init.F90
        ormas_int1x.F90
        ormas_int1xr.F90
        ormas_map1x.F90
        ormas_nstr.F90
        ormas_occbc.F90
        ormas_occvec.F90
        ormas_orbvec.F90
        ormas_rotaa.F90
        ormas_rotca.F90
        ormas_rotoo.F90
        ormas_sgn1x.F90
        ormas_str.F90
        ormas_madapt.F90
        ormas_xact2.F90
        ormas_xact2_donly.F90
        ormas_mkdden1.F90
        ormas_mkdden1_ras.F90
        ormas_mkdden1_old.F90
        ormas_mkden2x.F90
        ormas_mkden2x_ras.F90
        ormas_mkden2x_old.F90
        ormas_cic_print.F90
        ormas_rm_singles.F90
        ormas_elec2fun.F90
        ormas_sgnperm2.F90
        ormas_chkorth.F90
        ormas_bind_tdcis.F90
)