add_library(
    tdcc SHARED
        tdcc_init.F90
        tdcc_final.F90
        tdcc_mkmap.F90
        tdcc_getcc.F90
        tdcc_putcc.F90
        tdcc_fillcc.F90
        tdcc_print.F90
        tdcc_ccsolve.F90
        tdcc_ene.F90
        tdcc_hcc1.F90
        tdcc_hcc12.F90
        tdcc_mkint1x.F90
        tdcc_mkint2x.F90
        tdcc_spin_dummy.F90
        tdcc_spin_fock.F90
        tdcc_spin_int2x.F90
        tdcc_spin_t1inp.F90
        tdcc_spin_t2inp.F90
        tdcc_spin_t3inp.F90
        tdcc_spin_g1inp.F90
        tdcc_spin_g2inp.F90
        tdcc_spin_g3inp.F90
        tdcc_zeroout.F90
        tdcc_mkden1.F90
        tdcc_mkden2.F90
        tdcc_xact2.F90
        tdcc_xact2_solved.F90
        tdcc_xact2_solveb.F90
        tdcc_xact2_solved_itr.F90
        tdcc_bcct1.F90
        tdcc_mkbmat.F90
        tdcc_mkbmatx.F90
        tdcc_mkden2x.F90
        tdcc_mkamat.F90
        tdcc_mkbmat1.F90
        tdcc_mkbmat2.F90
        ccd_ene.F90
        ccd_t2.F90
        ccd_t2p_main.F90
        ccd_l2.F90
        ccd_l2p_main.F90
        ccd_den1.F90
        ccd_den1p_main.F90
        ccd_den2.F90
        ccd_den2p_main.F90
        ccsd_ene.F90
        ccsd_t1.F90
        ccsd_t2.F90
        ccsd_l1.F90
        ccsd_l2.F90
        ccsd_den1.F90
        ccsd_den2.F90
        bccd_t1p.F90
        bccd_t1p_main.F90
        bccd_l1p.F90
        bccd_l1p_main.F90
        bccd_l2p.F90
        bccd_l2p_main.F90
        bccd_den1p.F90
        bccd_den1p_main.F90
        bccd_den2p.F90
        bccd_den2p_main.F90
        bccd_bmat2p.F90
        bccd_bmat2p_main.F90
        ccdt_t2p.F90
        ccdt_t2p_main.F90
        ccdt_t2p_man01.F90
        ccdt_t2p_man02.F90
        ccdt_t2p_man03.F90
        ccdt_t2p_man04.F90
        ccdt_t3p.F90
        ccdt_t3p_main.F90
        ccdt_t3p_man01.F90
        ccdt_t3p_man02.F90
        ccdt_t3p_man03.F90
        ccdt_t3p_man04.F90
        ccdt_t3p_man05.F90
        ccdt_t3p_man06.F90
        ccdt_t3p_man07.F90
        ccdt_l2p.F90
        ccdt_l2p_main.F90
        ccdt_l2p_man03.F90
        ccdt_l2p_man04.F90
        ccdt_l2p_man05.F90
        ccdt_l2p_man06.F90
        ccdt_l2p_man07.F90
        ccdt_l2p_man08.F90
        ccdt_l2p_man10.F90
        ccdt_l2p_man11.F90
        ccdt_l2p_man12.F90
        ccdt_l2p_man13.F90
        ccdt_l2p_man14.F90
        ccdt_l2p_man15.F90
        ccdt_l2p_man16.F90
        ccdt_l2p_man17.F90
        ccdt_l2p_man18.F90
        ccdt_l3p.F90
        ccdt_l3p_main.F90
        ccdt_l3p_man01.F90
        ccdt_l3p_man02.F90
        ccdt_l3p_man03.F90
        ccdt_l3p_man04.F90
        ccdt_l3p_man05.F90
        ccdt_l3p_man06.F90
        ccdt_l3p_man07.F90
        ccdt_l3p_man08.F90
        ccdt_l3p_man09.F90
        ccdt_l3p_man10.F90
        ccdt_l3p_man11.F90
        ccdt_t2_1e.F90
        ccdt_t2p_1e_main.F90
        ccdt_t2p_1e_man01.F90
        ccdt_t2p_1e_man02.F90
        ccdt_t2p_1e_man03.F90
        ccdt_t3_1e.F90
        ccdt_t3p_1e_main.F90
        ccdt_t3p_1e_man01.F90
        ccdt_t3p_1e_man02.F90
        ccdt_t3p_1e_man03.F90
        ccdt_l2_1e.F90
        ccdt_l2p_1e_main.F90
        ccdt_l2p_1e_man01.F90
        ccdt_l2p_1e_man02.F90
        ccdt_l2p_1e_man03.F90
        ccdt_l2p_1e_man04.F90
        ccdt_l3_1e.F90
        ccdt_l3p_1e_main.F90
        ccdt_l3p_1e_man01.F90
        ccdt_l3p_1e_man02.F90
        ccdt_l3p_1e_man03.F90
        ccdt_t3p_diagram8.F90
        ccdt_l2p_diagram17.F90
        ccdt_l3p_diagram11.F90
        ccdt_den1p_main.F90
        ccdt_den1p.F90
        ccdt_den1p_man01.F90
        ccdt_den1p_man02.F90
        ccdt_den1p_man03.F90
        ccdt_den1p_man04.F90
        ccdt_den1p_man05.F90
        ccdt_den1p_man06.F90
        ccdt_den2p.F90
        ccdt_den2p_main.F90
        ccdt_den2p_man01.F90
        ccdt_den2p_man02.F90
        ccdt_den2p_man03.F90
        ccdt_den2p_man04.F90
        ccdt_den2p_man05.F90
        ccdt_den2p_man06.F90
        ccdt_den2p_man07.F90
        ccdt_den2p_man08.F90
        ccdt_den2p_man09.F90
        ccdt_den2p_man10.F90
        ccdt_den2p_man11.F90
        ccdt_den2p_man12.F90
        ccdt_den2p_man13.F90
        ccdt_den2p_man14.F90
        ccdt_den2p_man15.F90
        ccdt_den2p_man16.F90
        ccdt_den2p_man17.F90
        ccdt_den2p_man18.F90
        ccdt_den2p_man19.F90
        ccdt_den2p_man20.F90
        ccdt_den2p_man21.F90
        ccdt_den2p_man22.F90
        ccdt_den2p_man23.F90
        ccdt_den2p_man24.F90
        ccdt_den2p_man25.F90
        ccdt_den2p_man26.F90
        ccdt_den2p_man27.F90
        ccdt_bmat2p.F90
        ccdt_bmat2_main.F90
        ccdt_bmat2p_main.F90
        ccdt_bmat2p_man01.F90
        ccdt_bmat2p_man02.F90
        ccdt_bmat2p_man03.F90
        ccdt_bmat3p.F90
        ccdt_bmat3p_main.F90
        ccdt_bmat3p_man01.F90
        ccdt_bmat3p_man02.F90
        ccdt_den2xp.F90
        ccdt_den2xp_main.F90
        ccdt_den2xp_man01.F90
        ccdt_den2xp_man02.F90
        ccdt_den2xp_man03.F90
        ccdt_den2xp_man04.F90
        ccdt_den2xp_man05.F90
        ccdt_den2xp_man06.F90
        ccdt_amat_main.F90
        ccdt_amat_man01.F90
        ccdt_amat_man02.F90
        ccdt_amat_man03.F90
        ccdt_amat_man04.F90
        ccdt_amat_IIJJ.F90
        ccdt_amat_AABB.F90
        ccdt_amat_IAJJ.F90
        ccdt_amat_IABB.F90
        ccdt_amat_IIJB.F90
        ccdt_amat_AAJB.F90
        bccdt_t1p.F90
        bccdt_t1p_main.F90
        bccdt_t1p_man01.F90
        bccdt_l1p.F90
        bccdt_l1p_main.F90
        bccdt_l2p.F90
        bccdt_l2p_main.F90
        bccdt_l2p_man01.F90
        bccdt_l3p.F90
        bccdt_l3p_main.F90
        bccdt_l3p_man01.F90
        bccdt_den1p.F90
        bccdt_den1p_main.F90
        bccdt_den1p_man01.F90
        bccdt_den2p.F90
        bccdt_den2p_main.F90
        bccdt_den2p_man01.F90
        bccdt_bmat2p.F90
        bccdt_bmat2p_main.F90
        bccdt_bmat2p_man01.F90
        ccsdt_t1.F90
        ccsdt_t2.F90
        ccsdt_t3.F90
        ccsdt_l1.F90
        ccsdt_l2.F90
        ccsdt_l3.F90
)
target_link_libraries(
    tdcc PUBLIC
        OpenMP::OpenMP_Fortran
)